2007-10-19 Andreas Schmitz <schmitz@lat-lon.de>
    src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
    src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java:
	Made a first attempt to fix the following bug:
	http://sourceforge.net/tracker/index.php?func=detail&aid=1566976&group_id=118054&atid=679906
	
2007-10-14 Paul Austin <paul.austin@revolsys.com
          * Improved the Open Wizard to work when there is no active project.
            If there are no projects at all a new one is created. If all
            projects are iconized the user will be able to select either a
            new project or use an existing one.
            
2007-10-18 Andreas Schmitz <schmitz@lat-lon.de>
    src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java:
    Added initialization code.
    src/com/vividsolutions/jump/workbench/ui/renderer/ImageCachingFeatureCollectionRenderer.java:
    Fixed null pointer.

2007-10-18 Andreas Schmitz <schmitz@lat-lon.de>
    scripts/openjump.sh:
    Passing parameters to the script to OpenJUMP.

    src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,
    src/de/latlon/deejump/plugin/style/XSLUtility.java:
	Added proper exporting of transparency, line and polygon patterns.

2007-10-16 Andreas Schmitz <schmitz@lat-lon.de>
	src/org/openjump/core/ui/plugin/wms/AddWmsLayerWizard.java:
	Fixed storing of cached URLs.

2007-10-14 paul_d_austin <paul.austin@revolsys.com
   * Added a new wizard for opening different types of data. Includes
     functionality from the LoadDataset, AddWMSLayer and AddDataStoreLayer 
     plugins

2007-10-11 Andreas Schmitz <schmitz@lat-lon.de>
        etc/build.xml:
        Set source and target options of javac to 1.5.

2007-10-03 eri_lemesre <eric.lemesre@gmail.com>
          * Add Replace attribute value by copy from an other attribute 
            org.openjump.sigle.plugin.replace.ReplaceValuePlugIn.java
              
2007-09-24 paul_d_austin <paul.austin@revolsys.com