@@ -1,6 +1,9 @@
 package org.openjump.core.ui.plugin.file.open;
 
 import java.awt.BorderLayout;
+import java.awt.Rectangle;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -20,6 +23,7 @@ import org.openjump.core.ui.swing.wizard.WizardGroupListCellRenderer;
 import com.vividsolutions.jump.I18N;
 import com.vividsolutions.jump.workbench.WorkbenchContext;
 import com.vividsolutions.jump.workbench.ui.InputChangedListener;
+import com.vividsolutions.jump.workbench.ui.wizard.WizardDialog;
 import com.vividsolutions.jump.workbench.ui.wizard.WizardPanel;
 
 public class OpenDataTypePanel extends JPanel implements WizardPanel {
@@ -34,7 +38,7 @@ public class OpenDataTypePanel extends JPanel implements WizardPanel {
   private Set<InputChangedListener> listeners = new LinkedHashSet<InputChangedListener>();
 
   public OpenDataTypePanel(final WorkbenchContext workbenchContext,
-    List<WizardGroup> wizards) {
+    final WizardDialog dialog, final List<WizardGroup> wizards) {
     super(new BorderLayout());
     list = new JList(wizards.toArray());
     list.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
@@ -48,6 +52,19 @@ public class OpenDataTypePanel extends JPanel implements WizardPanel {
           listener.inputChanged();
         }
 
+      }
+    });
+    list.addMouseListener(new MouseAdapter() {
+      public void mouseClicked(MouseEvent e) {
+        if (e.getClickCount() == 2) {
+          int index = list.locationToIndex(e.getPoint());
+          if (index != -1) {
+            Rectangle bounds = list.getCellBounds(index, index);
+            if (bounds.contains(e.getPoint())) {
+              dialog.next();
+            }
+          }
+        }
       }
     });
     JScrollPane scrollPane = new JScrollPane(list);
